Perform automatic project sync changes