@@ -15,6 +15,8 @@ class Tests {
 
         const val INSTANCE_LIFECYCLE_SYS_PROP_NAME = "junit.jupiter.testinstance.lifecycle.default"
         const val INSTANCE_LIFECYCLE_SYS_PROP_VALUE = "per_class"
+        const val JVM_ARGS_ADD_OPENS = "--add-opens"
+        const val JVM_ARGS_ADD_OPENS_JAVA_UTIL = "java.base/java.util=ALL-UNNAMED"
         const val SHOW_CAUSES = true
         const val SHOW_EXCEPTIONS = true
         const val SHOW_STACK_TRACES = true
